[package]
name = "terra-sdk-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.5.4"
num = "0.4"
lazy_static = "1.3.3"
terra-sdk-internal = { path = "../internal" }
serde_json = "1.0"
serde = "1.0"
bech32 = "0.8.1"
